--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1095,6 +1095,7 @@
     }
    },
    "source": [
+    "from collections import Counter\n",
     "# Performing oversampling on RF and DT\n",
     "from imblearn.over_sampling import SMOTE\n",
     "\n",
